<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home_fragment">
    <LinearLayout
         android:background="#121212"
         android:layout_marginTop="56dp"
         android:layout_width="match_parent"
         android:gravity="center"
         android:orientation="vertical"
         android:weightSum="11"
        android:layout_marginBottom="60dp"
         android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:cardElevation="8dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="#FD121723"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="65dp"
                    android:scaleType="fitXY"
                    android:id="@+id/img"
                    android:src="@drawable/covid_virsu"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:text="Coronavirus COVID-19\nGlobal Cases"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-black"
                    android:textStyle="bold"
                    android:textColor="#ffff"
                    android:layout_marginBottom="10dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <GridLayout
            android:columnCount="2"
            android:rowCount="2"
            android:alignmentMode="alignMargins"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            >

            <!-- End Top Design-->
            <androidx.cardview.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#FD121723"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_confirmed"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="#D5D2D2"
                        />
                    <TextView
                        android:id="@+id/total_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:textSize="27sp"
                        android:textColor="#FAF6F6"
                        />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="#D5D2D2"
                        />
                    <TextView
                        android:id="@+id/today_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="#FAF6F6"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--End Row Tow Design-->
            <androidx.cardview.widget.CardView

                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#FD121723">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_deaths"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="#CBF44336"
                    />
                    <TextView
                        android:id="@+id/total_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:textSize="27sp"
                        android:textColor="#F61504"
                        />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="#CBF44336"
                        />
                    <TextView
                        android:id="@+id/today_death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:textColor="#F61504"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--End Tree Collu-->
            <androidx.cardview.widget.CardView
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="5dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#FD121723"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_recovered"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="#0FCDBC"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:id="@+id/total_recovered"
                        android:textSize="27sp"
                        android:textColor="#009688"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#FD121723"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_active"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="#EF5F90"
                        />

                    <TextView
                        android:id="@+id/total_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textStyle="bold"
                        android:textSize="27sp"
                        android:textColor="#E91E63"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="#FD121723"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:elevation="5dp"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="13sp"
                    android:textColor="#ffff"
                    android:id="@+id/lastUpdate"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/lastUpdate"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <ProgressBar
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_var"
        />
</FrameLayout>